# tree-sitter-ceex

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ceex.h  tree-sitter-ceex.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ceex/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCeexTests/: TreeSitterCeexTests.swift
queries/: highlights.scm
src/: grammar.json  parser.c
test/corpus/: combo.txt  phoenix.txt
test/highlight/: main.ceex
