[package]
name = "tree-sitter-ceex"
description = "ceex grammar for the tree-sitter parsing library"
version = "0.8.1"
keywords = ["incremental", "parsing", "ceex"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/combo-team/tree-sitter-ceex"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[dev-dependencies]
tree-sitter = "0.24.7"

[build-dependencies]
cc = "1.0"
